add description optional

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,12 @@
         <input id="settings-numberOfItems" type="number" placeholder="How many?"/>
     </label>
 </section>
-<section class="actionLogFilters">
+<section>
+    <label>
+        <input id="settings-addDescription" type="checkbox"/>Add description wherever possible
+    </label>
+</section>
+<section>
     <label title="Date, Campaign, Content, Actions, Browser">
         <input id="settings-actionLogFilters" type="checkbox"/>Set Action Log filters
     </label>
