campaign prefix, refactoring, utilities

--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,11 @@
 </section>
 
 <section>
+    <input id="settings-addNamePrefix" type="checkbox"/>
+    <label for="settings-addNamePrefix">Add campaign prefix to script/element name</label>
+</section>
+
+<section>
     <input id="settings-improveCM" type="checkbox"/>
     <label for="settings-improveCM">Improve Content Manager</label>
 </section>
