sync storage, increased timeouts, version

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
 
 <section>
     <input id="settings-addDescription" type="checkbox"/>
-    <label for="settings-addDescription">Add description wherever possible</label>
+    <label for="settings-addDescription">Add date and author in description</label>
 </section>
 
 <section>
