--- a/popup.html
+++ b/popup.html
@@ -14,17 +14,17 @@
             <input id="settings-sameForAll" type="checkbox"/>
             <label for="settings-sameForAll">Same for all environments</label>
             <div>
-                <div>UI61:</div>
+                <a href="https://ui61.maxymiser.com/" target="_blank">EMEA</a>
                 <input id="settings-login" type="email" placeholder="Login"/>
                 <input id="settings-password" type="password" placeholder="Password"/>
             </div>
             <div>
-                <div>UI61US:</div>
+                <a href="https://ui61us.maxymiser.com/" target="_blank">US</a>
                 <input id="settings-loginUS" type="email" placeholder="Login"/>
                 <input id="settings-passwordUS" type="password" placeholder="Password"/>
             </div>
             <div>
-                <div>DEMO:</div>
+                <a href="https://demo.maxymiser.org/" target="_blank">Demo</a>
                 <input id="settings-loginDemo" type="email" placeholder="Login"/>
                 <input id="settings-passwordDemo" type="password" placeholder="Password"/>
             </div>
