omit campaign action details page

--- a/popup.html
+++ b/popup.html
@@ -44,17 +44,22 @@
 
     <section>
         <input id="settings-addNamePrefix" type="checkbox"/>
-        <label for="settings-addNamePrefix">Add campaign prefix to script/element name</label>
+        <label for="settings-addNamePrefix">Add Campaign prefix to script/element name</label>
     </section>
 
     <section>
         <input id="settings-improveCM" type="checkbox"/>
-        <label for="settings-improveCM">Improve Content Manager</label>
+        <label for="settings-improveCM" title="Add multiple files upload, removal, drag&drop functionality">Improve Content Manager</label>
+    </section>
+
+    <section>
+        <input id="settings-omitActionDetails" type="checkbox"/>
+        <label for="settings-omitActionDetails" title="Go directly to Edit Action page">Omit Campaign Action Details page</label>
     </section>
 
     <section>
         <input id="settings-filterActionLog" type="checkbox"/>
-        <label for="settings-filterActionLog" title="Default: Date, Campaign, Actions, Browser">Change default action log filters</label>
+        <label for="settings-filterActionLog">Change default Action Log filters</label>
         <ul id="settings-actionLogFiltersList">
             <li><label><input type="checkbox" id="DATE">Date</label>
             <li><label><input type="checkbox" id="HIT">Hit</label>
