--- a/popup.html
+++ b/popup.html
@@ -58,6 +58,11 @@
     </section>
 
     <section>
+        <input id="settings-addScriptIfNo" type="checkbox"/>
+        <label for="settings-addScriptIfNo">If no Campaign scripts then add a new one</label>
+    </section>
+
+    <section>
         <input id="settings-filterActionLog" type="checkbox"/>
         <label for="settings-filterActionLog">Change default Action Log filters</label>
         <ul id="settings-actionLogFiltersList">
