--- a/popup.html
+++ b/popup.html
@@ -112,8 +112,8 @@
 
     <section>
         <button class="settings-save">Save</button>
-        <span class="notification">Settings saved!</span>
-        <button class="settings-reset right" title="Reset to defaults">Reset</button>
+        <button class="settings-reset" title="Reset to defaults">Reset</button>
+        <span class="notification"></span>
     </section>
 </div>
 
