--- a/popup.html
+++ b/popup.html
@@ -63,6 +63,11 @@
     </section>
 
     <section>
+        <input id="settings-reorderCmpSidebar" type="checkbox"/>
+        <label for="settings-reorderCmpSidebar" title="Moves Campaign Scripts and Mappings out of additional settings">Reorder Campaign sidebar</label>
+    </section>
+
+    <section>
         <input id="settings-filterActionLog" type="checkbox"/>
         <label for="settings-filterActionLog">Change default Action Log filters</label>
         <ul id="settings-actionLogFiltersList">
