--- a/popup.html
+++ b/popup.html
@@ -68,6 +68,11 @@
     </section>
 
     <section>
+        <input id="settings-alternativeDocTitle" type="checkbox"/>
+        <label for="settings-alternativeDocTitle" title="Adds more info to the title tag">Alternative document title</label>
+    </section>
+
+    <section>
         <input id="settings-filterActionLog" type="checkbox"/>
         <label for="settings-filterActionLog">Change default Action Log filters</label>
         <ul id="settings-actionLogFiltersList">
