--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
 
     <section>
         <input id="settings-moreItems" type="checkbox"/>
-        <label for="settings-moreItems" title="More than 20 and less than 300">Show more items per page</label>
+        <label for="settings-moreItems" title="Between 20 and 300">Show more items per page</label>
         <input id="settings-numberOfItems" type="number" placeholder="How many?"/>
     </section>
 
