--- a/popup.html
+++ b/popup.html
@@ -73,6 +73,11 @@
     </section>
 
     <section>
+        <input id="settings-addFilterInput" type="checkbox"/>
+        <label for="settings-addFilterInput" title="Adds an input next to selects which allows to filter options">Add input for filtering options in selects</label>
+    </section>
+
+    <section>
         <input id="settings-filterActionLog" type="checkbox"/>
         <label for="settings-filterActionLog">Change default Action Log filters</label>
         <ul id="settings-actionLogFiltersList">
