--- a/popup.html
+++ b/popup.html
@@ -64,7 +64,7 @@
 
     <section>
         <input id="settings-reorderCmpSidebar" type="checkbox"/>
-        <label for="settings-reorderCmpSidebar" title="Moves Campaign Scripts and Mappings out of Additional Settings and expand Site Settings">Reorder Campaign sidebar</label>
+        <label for="settings-reorderCmpSidebar" title="Moves Campaign Scripts and Mappings out of Additional Settings and expands Site Settings">Reorder Campaign sidebar</label>
     </section>
 
     <section>
