predefined code snippet in script body, optional

--- a/popup.html
+++ b/popup.html
@@ -38,13 +38,19 @@
     </section>
 
     <section>
+        <input id="settings-addNamePrefix" type="checkbox"/>
+        <label for="settings-addNamePrefix" title="Format: T31_">Add campaign prefix to new script/element name</label>
+    </section>
+
+    <section>
         <input id="settings-addDescription" type="checkbox"/>
         <label for="settings-addDescription" title="Format: 8.07.2015 by John Doe">Add date and author in description</label>
     </section>
 
     <section>
-        <input id="settings-addNamePrefix" type="checkbox"/>
-        <label for="settings-addNamePrefix" title="Format: T31_">Add Campaign prefix to script/element name</label>
+        <input id="settings-addScriptBody" type="checkbox"/>
+        <label for="settings-addScriptBody">Add some predefined code for new scripts</label>
+        <textarea id="settings-scriptBody" placeholder="//your code goes here, leave blank for default"></textarea>
     </section>
 
     <section>
