action log filters in 2 columns

--- a/popup.html
+++ b/popup.html
@@ -86,49 +86,53 @@
     <section>
         <input id="settings-filterActionLog" type="checkbox"/>
         <label for="settings-filterActionLog">Change default Action Log filters</label>
-        <ul id="settings-actionLogFiltersList">
-            <li><label><input type="checkbox" id="DATE">Date</label>
-            <li><label><input type="checkbox" id="HIT">Hit</label>
-            <li><label><input type="checkbox" id="VISITOR">Visitor</label>
-            <li><label><input type="checkbox" id="IP">IP</label>
-            <li><label><input type="checkbox" id="CITY">City</label>
-            <li><label><input type="checkbox" id="COUNTRY">Country</label>
-            <li><label><input type="checkbox" id="PAGE">Page</label>
-            <li><label><input type="checkbox" id="CAMPAIGN">Campaign</label>
+        <div id="settings-actionLogFiltersList">
+            <ul>
+                <li><label><input type="checkbox" id="DATE">Date</label>
+                <li><label><input type="checkbox" id="HIT">Hit</label>
+                <li><label><input type="checkbox" id="VISITOR">Visitor</label>
+                <li><label><input type="checkbox" id="IP">IP</label>
+                <li><label><input type="checkbox" id="CITY">City</label>
+                <li><label><input type="checkbox" id="COUNTRY">Country</label>
+                <li><label><input type="checkbox" id="PAGE">Page</label>
+                <li><label><input type="checkbox" id="CAMPAIGN">Campaign</label>
 
-            <li><label><input type="checkbox" id="CAMPAIGN_VERSION">Version</label>
-            <li><label><input type="checkbox" id="ISGENERATION">Is Generation</label>
-            <li><label><input type="checkbox" id="ISCONTENTPAGE">Is Content Page</label>
-            <li><label><input type="checkbox" id="CONTENT">Content</label>
-            <li><label><input type="checkbox" id="ACTIONS">Actions</label>
-            <li><label><input type="checkbox" id="CRITERIA">Criteria</label>
-            <li><label><input type="checkbox" id="SEGMENTS">Segments</label>
-            <li><label><input type="checkbox" id="COOKIES">Cookies</label>
+                <li><label><input type="checkbox" id="CAMPAIGN_VERSION">Version</label>
+                <li><label><input type="checkbox" id="ISGENERATION">Is Generation</label>
+                <li><label><input type="checkbox" id="ISCONTENTPAGE">Is Content Page</label>
+                <li><label><input type="checkbox" id="CONTENT">Content</label>
+                <li><label><input type="checkbox" id="ACTIONS">Actions</label>
+                <li><label><input type="checkbox" id="CRITERIA">Criteria</label>
+                <li><label><input type="checkbox" id="SEGMENTS">Segments</label>
+                <li><label><input type="checkbox" id="COOKIES">Cookies</label>
 
-            <li><label><input type="checkbox" id="REFERRER">Referrer</label>
-            <li><label><input type="checkbox" id="SERVER">Server</label>
-            <li><label><input type="checkbox" id="AGENT">Agent</label>
-            <li><label><input type="checkbox" id="BROWSER">Browser</label>
-            <li><label><input type="checkbox" id="OS">OS</label>
-            <li><label><input type="checkbox" id="DEVICETYPE">Device Type</label>
-            <li><label><input type="checkbox" id="SITELOCATION">Site Pages</label>
-            <li><label><input type="checkbox" id="GENERATIONMETHOD">Generation Method</label>
+                <li><label><input type="checkbox" id="REFERRER">Referrer</label>
+                <li><label><input type="checkbox" id="SERVER">Server</label>
+                <li><label><input type="checkbox" id="AGENT">Agent</label>
+            </ul>
+            <ul>
+                <li><label><input type="checkbox" id="BROWSER">Browser</label>
+                <li><label><input type="checkbox" id="OS">OS</label>
+                <li><label><input type="checkbox" id="DEVICETYPE">Device Type</label>
+                <li><label><input type="checkbox" id="SITELOCATION">Site Pages</label>
+                <li><label><input type="checkbox" id="GENERATIONMETHOD">Generation Method</label>
 
-            <li><label><input type="checkbox" id="EXTERNAL_ID1">Visitor ID 1</label>
-            <li><label><input type="checkbox" id="EXTERNAL_ID2">Visitor ID 2</label>
-            <li><label><input type="checkbox" id="EXTERNAL_ID3">Visitor ID 3</label>
-            <li><label><input type="checkbox" id="EXTERNAL_ID4">Visitor ID 4</label>
-            <li><label><input type="checkbox" id="EXTERNAL_ID5">Visitor ID 5</label>
-            <li><label><input type="checkbox" id="WEATHER_CONDITIONS">Weather condition</label>
-            <li><label><input type="checkbox" id="WEATHER_TEMPERATURE_RANGE">Temperature range</label>
-            <li><label><input type="checkbox" id="SEARCH_ENGINE">Search Engine</label>
+                <li><label><input type="checkbox" id="EXTERNAL_ID1">Visitor ID 1</label>
+                <li><label><input type="checkbox" id="EXTERNAL_ID2">Visitor ID 2</label>
+                <li><label><input type="checkbox" id="EXTERNAL_ID3">Visitor ID 3</label>
+                <li><label><input type="checkbox" id="EXTERNAL_ID4">Visitor ID 4</label>
+                <li><label><input type="checkbox" id="EXTERNAL_ID5">Visitor ID 5</label>
+                <li><label><input type="checkbox" id="WEATHER_CONDITIONS">Weather condition</label>
+                <li><label><input type="checkbox" id="WEATHER_TEMPERATURE_RANGE">Temperature range</label>
+                <li><label><input type="checkbox" id="SEARCH_ENGINE">Search Engine</label>
 
-            <li><label><input type="checkbox" id="REFERRER_DOMAIN">Session Referrer</label>
-            <li><label><input type="checkbox" id="SEARCH_PHRASE">Search Phrase</label>
-            <li><label><input type="checkbox" id="SOCIAL_NETWORK">Social Network</label>
-            <li><label><input type="checkbox" id="TRAFFIC_SOURCE_TYPE">Traffic Source Type</label>
-            <li><label><input type="checkbox" id="TARGETED_GROUP">Targeted group</label>
-        </ul>
+                <li><label><input type="checkbox" id="REFERRER_DOMAIN">Session Referrer</label>
+                <li><label><input type="checkbox" id="SEARCH_PHRASE">Search Phrase</label>
+                <li><label><input type="checkbox" id="SOCIAL_NETWORK">Social Network</label>
+                <li><label><input type="checkbox" id="TRAFFIC_SOURCE_TYPE">Traffic Source Type</label>
+                <li><label><input type="checkbox" id="TARGETED_GROUP">Targeted group</label>
+            </ul>
+        </div>
     </section>
 
     <section>
