--- a/popup.html
+++ b/popup.html
@@ -50,7 +50,7 @@
     <section>
         <input id="settings-addScriptBody" type="checkbox"/>
         <label for="settings-addScriptBody">Add some predefined code for new scripts</label>
-        <textarea id="settings-scriptBody" placeholder="//your code goes here, leave blank for default"></textarea>
+        <textarea id="settings-scriptBody" placeholder="leave blank for default"></textarea>
     </section>
 
     <section>
