--- a/popup.html
+++ b/popup.html
@@ -8,132 +8,19 @@
     </div>
 
     <section>
+        <input id="settings-autoOpen" type="checkbox"/>
+        <label for="settings-autoOpen" title="Automatically open luncher in a new tab if it's before 11">Auto-open</label>
+    </section>
+
+    <section>
         <input id="settings-autoLogin" type="checkbox"/>
-        <label for="settings-autoLogin" title="Credentials will be stored in Chrome storage, not sure how safe it is">Autologin</label>
-        <div>
-            <input id="settings-sameForAll" type="checkbox"/>
-            <label for="settings-sameForAll">Same for all environments</label>
-            <div>
-                <a href="https://ui61.maxymiser.com/" target="_blank">EMEA</a>
-                <input id="settings-login" type="email" placeholder="Login"/>
-                <input id="settings-password" type="password" placeholder="Password"/>
-            </div>
-            <div>
-                <a href="https://ui61us.maxymiser.com/" target="_blank">US</a>
-                <input id="settings-loginUS" type="email" placeholder="Login"/>
-                <input id="settings-passwordUS" type="password" placeholder="Password"/>
-            </div>
-            <div>
-                <a href="https://demo.maxymiser.org/" target="_blank">Demo</a>
-                <input id="settings-loginDemo" type="email" placeholder="Login"/>
-                <input id="settings-passwordDemo" type="password" placeholder="Password"/>
-            </div>
-        </div>
+        <label for="settings-autoLogin" title="Credentials will be stored in Chrome storage">Auto-login</label>
     </section>
 
-    <section>
-        <input id="settings-moreItems" type="checkbox"/>
-        <label for="settings-moreItems" title="Between 20 and 300">Show more items per page</label>
-        <input id="settings-numberOfItems" type="number" placeholder="How many?"/>
-    </section>
-
-    <section>
-        <input id="settings-addNamePrefix" type="checkbox"/>
-        <label for="settings-addNamePrefix" title="Format: T31_">Add campaign prefix to new script/element name</label>
-    </section>
-
-    <section>
-        <input id="settings-addDescription" type="checkbox"/>
-        <label for="settings-addDescription" title="Format: 8.07.2015 by John Doe">Add date and author in description</label>
-    </section>
-
-    <section>
-        <input id="settings-addScriptBody" type="checkbox"/>
-        <label for="settings-addScriptBody">Add some predefined code for new scripts</label>
-        <textarea id="settings-scriptBody" placeholder="leave blank for default"></textarea>
-    </section>
-
-    <section>
-        <input id="settings-improveCM" type="checkbox"/>
-        <label for="settings-improveCM" title="Add multiple files upload, removal, drag&drop functionality">Improve Content Manager</label>
-    </section>
-
-    <section>
-        <input id="settings-omitActionDetails" type="checkbox"/>
-        <label for="settings-omitActionDetails" title="Action Details page seems to be useless so it will go to Edit Action page instead">Omit Action Details page</label>
-    </section>
-
-    <section>
-        <input id="settings-addScriptIfNo" type="checkbox"/>
-        <label for="settings-addScriptIfNo" title="Redirect from Campaign Scripts page to Add Script if the list of existing scripts is empty">If no Campaign scripts then add a new one</label>
-    </section>
-
-    <section>
-        <input id="settings-reorderCmpSidebar" type="checkbox"/>
-        <label for="settings-reorderCmpSidebar" title="Moves Campaign Scripts and Mappings out of Additional Settings and expands Site Settings">Reorder Campaign sidebar</label>
-    </section>
-
-    <section>
-        <input id="settings-alternativeDocTitle" type="checkbox"/>
-        <label for="settings-alternativeDocTitle" title="Adds more info to the title tag">Alternative document title</label>
-    </section>
-
-    <section>
-        <input id="settings-addFilterInput" type="checkbox"/>
-        <label for="settings-addFilterInput" title="Adds an input next to selects which allows to filter options">Add input for filtering options in selects</label>
-    </section>
-
-    <section>
-        <input id="settings-filterActionLog" type="checkbox"/>
-        <label for="settings-filterActionLog">Change default Action Log filters</label>
-        <div id="settings-actionLogFiltersList">
-            <ul>
-                <li><label><input type="checkbox" id="DATE">Date</label>
-                <li><label><input type="checkbox" id="HIT">Hit</label>
-                <li><label><input type="checkbox" id="VISITOR">Visitor</label>
-                <li><label><input type="checkbox" id="IP">IP</label>
-                <li><label><input type="checkbox" id="CITY">City</label>
-                <li><label><input type="checkbox" id="COUNTRY">Country</label>
-                <li><label><input type="checkbox" id="PAGE">Page</label>
-                <li><label><input type="checkbox" id="CAMPAIGN">Campaign</label>
-
-                <li><label><input type="checkbox" id="CAMPAIGN_VERSION">Version</label>
-                <li><label><input type="checkbox" id="ISGENERATION">Is Generation</label>
-                <li><label><input type="checkbox" id="ISCONTENTPAGE">Is Content Page</label>
-                <li><label><input type="checkbox" id="CONTENT">Content</label>
-                <li><label><input type="checkbox" id="ACTIONS">Actions</label>
-                <li><label><input type="checkbox" id="CRITERIA">Criteria</label>
-                <li><label><input type="checkbox" id="SEGMENTS">Segments</label>
-                <li><label><input type="checkbox" id="COOKIES">Cookies</label>
-
-                <li><label><input type="checkbox" id="REFERRER">Referrer</label>
-                <li><label><input type="checkbox" id="SERVER">Server</label>
-                <li><label><input type="checkbox" id="AGENT">Agent</label>
-            </ul>
-            <ul>
-                <li><label><input type="checkbox" id="BROWSER">Browser</label>
-                <li><label><input type="checkbox" id="OS">OS</label>
-                <li><label><input type="checkbox" id="DEVICETYPE">Device Type</label>
-                <li><label><input type="checkbox" id="SITELOCATION">Site Pages</label>
-                <li><label><input type="checkbox" id="GENERATIONMETHOD">Generation Method</label>
-
-                <li><label><input type="checkbox" id="EXTERNAL_ID1">Visitor ID 1</label>
-                <li><label><input type="checkbox" id="EXTERNAL_ID2">Visitor ID 2</label>
-                <li><label><input type="checkbox" id="EXTERNAL_ID3">Visitor ID 3</label>
-                <li><label><input type="checkbox" id="EXTERNAL_ID4">Visitor ID 4</label>
-                <li><label><input type="checkbox" id="EXTERNAL_ID5">Visitor ID 5</label>
-                <li><label><input type="checkbox" id="WEATHER_CONDITIONS">Weather condition</label>
-                <li><label><input type="checkbox" id="WEATHER_TEMPERATURE_RANGE">Temperature range</label>
-                <li><label><input type="checkbox" id="SEARCH_ENGINE">Search Engine</label>
-
-                <li><label><input type="checkbox" id="REFERRER_DOMAIN">Session Referrer</label>
-                <li><label><input type="checkbox" id="SEARCH_PHRASE">Search Phrase</label>
-                <li><label><input type="checkbox" id="SOCIAL_NETWORK">Social Network</label>
-                <li><label><input type="checkbox" id="TRAFFIC_SOURCE_TYPE">Traffic Source Type</label>
-                <li><label><input type="checkbox" id="TARGETED_GROUP">Targeted group</label>
-            </ul>
-        </div>
-    </section>
+    <!--<section>-->
+        <!--<input id="settings-autoOrder" type="checkbox"/>-->
+        <!--<label for="settings-autoOrder" title="Automatically order 'random' meal">Auto-order</label>-->
+    <!--</section>-->
 
     <section>
         <button class="settings-save">Save</button>
