--- a/popup.html
+++ b/popup.html
@@ -17,10 +17,12 @@
         <label for="settings-autoLogin" title="Credentials will be stored in Chrome storage">Auto-login</label>
     </section>
 
-    <!--<section>-->
-        <!--<input id="settings-autoOrder" type="checkbox"/>-->
-        <!--<label for="settings-autoOrder" title="Automatically order 'random' meal">Auto-order</label>-->
-    <!--</section>-->
+    <section>
+        <input id="settings-autoOrder" type="checkbox"/>
+        <label for="settings-autoOrder" title="Automatically order a meal: based on your preferences or random">Auto-order</label>
+        <textarea id="settings-orderPrefsFirst" title="RegExp case ignored, e.g. &quot;szczawiowa|krem z broku&#322;&#243;w&quot;" placeholder="First meal"></textarea>
+        <textarea id="settings-orderPrefsSecond" title="RegExp case ignored, e.g. &quot;carbonarra|pier&#347; kurczaka|pierogi z mi&#281;sem&quot;" placeholder="Second meal"></textarea>
+    </section>
 
     <section>
         <button class="settings-save">Save</button>
