--- a/popup.html
+++ b/popup.html
@@ -20,8 +20,8 @@
     <section>
         <input id="settings-autoOrder" type="checkbox"/>
         <label for="settings-autoOrder" title="Automatically order a meal: based on your preferences or random">Auto-order</label>
-        <textarea id="settings-orderPrefsFirst" title="RegExp case ignored, e.g. &quot;szczawiowa|krem z broku&#322;&#243;w&quot;" placeholder="First meal"></textarea>
-        <textarea id="settings-orderPrefsSecond" title="RegExp case ignored, e.g. &quot;carbonarra|pier&#347; kurczaka|pierogi z mi&#281;sem&quot;" placeholder="Second meal"></textarea>
+        <textarea id="settings-orderPrefsFirst" title="RegExp case insensitive, e.g. &quot;szczawiowa|krem z broku&#322;&#243;w&quot;" placeholder="First meal"></textarea>
+        <textarea id="settings-orderPrefsSecond" title="RegExp case insensitive, e.g. &quot;carbonarra|pier&#347; kurczaka|pierogi z mi&#281;sem&quot;" placeholder="Second meal"></textarea>
     </section>
 
     <section>
